Bug 154773 - Symbols dialog in Math does not respect dark mode
Summary: Symbols dialog in Math does not respect dark mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: accessibility
Depends on:
Blocks: Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2023-04-12 13:57 UTC by Rafael Lima
Modified: 2024-02-05 10:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the problem (54.17 KB, image/png)
2023-04-12 13:57 UTC, Rafael Lima
Details
Dialog after clicking multiple symbols (36.17 KB, image/png)
2023-04-12 14:06 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2023-04-12 13:57:37 UTC
Created attachment 186615 [details]
Screenshot showing the problem

Using dark mode, open the Symbols dialog in Math. Notice that the symbols are black over a dark background.

Steps to reproduce (make sure you're using dark mode):
1) Open LO Math
2) Go to Tools - Symbols
3) Notice the issue

System info

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.5.2~rc2-0ubuntu0.22.10.1~lo1
Calc: threaded
Comment 1 Rafael Lima 2023-04-12 14:06:52 UTC
Created attachment 186616 [details]
Dialog after clicking multiple symbols

Another related bug... if you click multiple options in the dialog, their background is painted white and then retain the white color.
Comment 2 Rafael Lima 2023-04-12 14:15:59 UTC
It's a simple fix. Proposed patch here:

https://gerrit.libreoffice.org/c/core/+/150209
Comment 3 Stéphane Guillou (stragu) 2023-04-12 15:00:45 UTC
Reproduced on Ubuntu 20.04 with GNOME 3.36.8 using kf5:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1b06f35de68a555b85bceb5fc29d1a5f426f4bb7
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

as well as with qt5:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1b06f35de68a555b85bceb5fc29d1a5f426f4bb7
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: qt5 (qfont+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

GTK is black characters over white background.
Comment 4 Commit Notification 2023-04-18 12:06:42 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2c01d4448a8059b5f335d07347b9e85a0d0031d8

tdf#154773 Fix Symbols dialog in dark mode

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-04-18 20:58:36 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/69dfde2d2e42a21444e1a4b18f0a4a1929ac330d

tdf#154773 Fix Symbols dialog in dark mode

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2024-02-05 10:49:01 UTC
Verified fix in:

Version: 7.5.9.2 (X86_64) / LibreOffice Community
Build ID: cdeefe45c17511d326101eed8008ac4092f278a9
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Rafael!