tdf#154773 Fix Symbols dialog in dark mode

Change-Id: I92029f1d19c7545a4122b125ae69ab5964e562d2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150209
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit 2c01d4448a8059b5f335d07347b9e85a0d0031d8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150564
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>